refactor: Optional로 null 로직 개선